[FIX] Fix layout spacing inconsistencies.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: SoloFolio
 Theme URI: http://solofol.io/
 Description: SoloFolio is a simple and professional theme built specifically for photography portfolio websites. Features include responsive photo galleries with retina images, a no-compromises experience for mobile/tablet users, custom widgets for dropdown menus and social media icons, WooCommerce compatiblity, live location via Blink, and integration with Photoshelter BEAM template Element.
-Version: 7.0.84
+Version: 7.0.85
 Author: Joel Hawksley
 Author URI: http://www.joelhawksley.com/
 License: GNU General Public License v2 or later
@@ -911,7 +911,7 @@ input:focus, textarea:focus, button:focus { outline: none }
     margin-left: auto;
     margin-right: auto;
   }
-  .centered-content iframe { margin: 1rem auto !important }
+  .centered-content iframe { margin: 0 auto 1rem auto !important }
   .heights .header-meta { margin-bottom: 1em }
   .heights .header { height: 100% }
   .heights .header-inner {
